[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Menu/IndividualGame.gd" type="Script" id=1]
[ext_resource path="res://gfx/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Menu/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Menu/Options.tscn" type="PackedScene" id=4]

[node name="IndividualGame" instance=ExtResource( 3 )]
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="0"]
margin_left = 522.0
margin_top = 188.0
margin_right = 822.0
margin_bottom = 771.0
custom_constants/separation = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer" index="0"]
margin_right = 300.0
margin_bottom = 32.0

[node name="HighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2" index="0"]
margin_right = 114.0
margin_bottom = 32.0
text = "High score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 118.0
margin_right = 300.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="Options" parent="CenterContainer/VBoxContainer" index="1" instance=ExtResource( 4 )]
margin_top = 62.0
margin_right = 300.0
margin_bottom = 515.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer" index="2"]
margin_top = 545.0
margin_right = 300.0
margin_bottom = 583.0
custom_constants/separation = 50
alignment = 1

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer" index="0"]
margin_left = 32.0
margin_right = 154.0
margin_bottom = 38.0
text = "Main Menu"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer" index="1"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 38.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
